--- a/1 Writing Efficient Python Code/1 Foundations for efficiencies.ipynb
+++ b/1 Writing Efficient Python Code/1 Foundations for efficiencies.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +103,7 @@
      "text": [
       "<class 'range'>\n",
       "[0, 1, 2, 3, 4, 5]\n",
+      "<class 'list'>\n",
       "[1, 3, 5, 7, 9, 11]\n"
      ]
     }
@@ -118,6 +119,7 @@
     "\n",
     "# Create a new list of odd numbers from 1 to 11 by unpacking a range object\n",
     "nums_list2 = [*range(1,12,2)]\n",
+    "print(type(nums_list2))\n",
     "print(nums_list2)"
    ]
   },
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -190,8 +192,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 57,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -217,11 +221,118 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Practice with NumPy arrays()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6  7  8  9 10]\n",
+      "[ 7  8  9 10]\n",
+      "[[ 2  4  6  8 10]\n",
+      " [12 14 16 18 20]]\n",
+      "[[ 1  2  4  4  5]\n",
+      " [ 6  7  9  9 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "nums = np.array([[ 1,  2,  3,  4,  5], [ 6,  7,  8,  9, 10]])\n",
+    "\n",
+    "# Print second row of nums\n",
+    "print(nums[1,:])\n",
+    "\n",
+    "# Print all elements of nums that are greater than six\n",
+    "print(nums[nums > 6])\n",
+    "\n",
+    "# Double every element of nums\n",
+    "nums_dbl = nums * 2\n",
+    "print(nums_dbl)\n",
+    "\n",
+    "# Replace the third column of nums\n",
+    "nums[:, 2] = nums[:, 2] + 1\n",
+    "print(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- ---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Using numpy arrays allows you to take advantage of an array's memory efficient nature and easily perform mathematical operations on your data._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bringing it all together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Festivus Jerry... You're 7 min late.\n",
+      "Welcome to Festivus Kramer... You're 17 min late.\n",
+      "Welcome to Festivus Elaine... You're 27 min late.\n",
+      "Welcome to Festivus George... You're 37 min late.\n",
+      "Welcome to Festivus Newman... You're 47 min late.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a list of arrival times\n",
+    "arrival_times = [*range(10,60,10)]\n",
+    "\n",
+    "# Convert arrival_times to an array and update the times\n",
+    "arrival_times_np = np.array(arrival_times)\n",
+    "new_times = arrival_times_np - 3\n",
+    "\n",
+    "\n",
+    "# Use list comprehension and enumerate to pair guests to new times\n",
+    "guest_arrivals = [(names[i],time) for i, time in enumerate(new_times)]\n",
+    "\n",
+    "\n",
+    "def welcome_guest(self):\n",
+    "    welcome = str(f\"Welcome to Festivus {self[0]}... You're {self[1]} min late.\")\n",
+    "    return welcome\n",
+    "\n",
+    "#Map the welcome_guest function to each (guest,time) pair\n",
+    "welcome_map = map(welcome_guest, guest_arrivals)\n",
+    "\n",
+    "guest_welcomes = [*welcome_map]\n",
+    "print(*guest_welcomes, sep='\\n')"
+   ]
   }
  ],
  "metadata": {
