--- a/3 Gaining efficiencies/3 Gaining efficiences.ipynb
+++ b/3 Gaining efficiencies/3 Gaining efficiences.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -242,10 +242,10 @@
       " {'Psyduck', 'Squirtle'} \n",
       "\n",
       "Misty doesn't have those Pokémon:\n",
-      " {'Spearow', 'Pikachu', 'Bulbasaur', 'Zubat', 'Rattata', 'Koffing', 'Wigglytuff', 'Vulpix'} \n",
+      " {'Zubat', 'Pikachu', 'Koffing', 'Rattata', 'Bulbasaur', 'Spearow', 'Wigglytuff', 'Vulpix'} \n",
       "\n",
       "Pokémon that are in only one set (not both):\n",
-      " {'Starmie', 'Wigglytuff', 'Spearow', 'Pikachu', 'Bulbasaur', 'Magikarp', 'Horsea', 'Zubat', 'Rattata', 'Vaporeon', 'Tentacool', 'Poliwag', 'Krabby', 'Slowbro', 'Koffing', 'Vulpix'} \n",
+      " {'Poliwag', 'Starmie', 'Wigglytuff', 'Horsea', 'Magikarp', 'Krabby', 'Vulpix', 'Zubat', 'Koffing', 'Pikachu', 'Rattata', 'Vaporeon', 'Bulbasaur', 'Spearow', 'Slowbro', 'Tentacool'} \n",
       "\n"
      ]
     }
@@ -277,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Kabutops', 'Geodude', 'Tauros', 'Onix', 'Zubat', 'Omastar', 'Machop', 'Golem', 'Vulpix', 'Dugtrio'}\n",
+      "{'Tauros', 'Machop', 'Omastar', 'Zubat', 'Onix', 'Geodude', 'Dugtrio', 'Golem', 'Kabutops', 'Vulpix'}\n",
       "True\n",
       "False\n",
       "False\n",
@@ -307,11 +307,243 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gathering unique Pokémon\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#function was written to gather unique values from each list:\n",
+    "def find_unique_items(data):\n",
+    "    uniques = []\n",
+    "\n",
+    "    for item in data:\n",
+    "        if item not in uniques:\n",
+    "            uniques.append(item)\n",
+    "\n",
+    "    return uniques\n",
+    "\n",
+    "#Read files\n",
+    "f_sample_names = 'sample_names.txt'\n",
+    "sample_names = np.loadtxt(f_sample_names, delimiter=',', dtype=str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "368\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use the provided function to collect unique Pokémon names\n",
+    "uniq_names_func = find_unique_items(sample_names)\n",
+    "print(len(uniq_names_func))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "368\n",
+      "368\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use find_unique_items() to collect unique Pokémon names\n",
+    "uniq_names_func = find_unique_items(sample_names)\n",
+    "print(len(uniq_names_func))\n",
+    "\n",
+    "# Convert the names list to a set to collect unique Pokémon names\n",
+    "uniq_names_set = set(sample_names)\n",
+    "print(len(uniq_names_set))\n",
+    "\n",
+    "# Check that both unique collections are equivalent\n",
+    "print(sorted(uniq_names_func) == sorted(uniq_names_set))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "137 µs ± 4.66 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "978 µs ± 20.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit uniq_names_set = set(sample_names)\n",
+    "%timeit uniq_names_func = find_unique_items(sample_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Using a **set** to collect unique values is faster_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Bug', 'Poison', 'Electric', 'Steel', 'Water', 'Grass', 'Flying', 'Normal', 'Ground', 'Fighting', 'Dragon', 'Fairy', 'Ice', 'Rock', 'Dark', 'Ghost', 'Fire', 'Psychic'}\n",
+      "{'6', '1', '2', '4', '5', '3'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use the best approach to collect unique primary types and generations\n",
+    "uniq_types = set(primary_types) \n",
+    "uniq_gens = set(generations)\n",
+    "print(uniq_types, uniq_gens, sep='\\n') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gathering Pokémon without a loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "441 µs ± 10.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Read files\n",
+    "f_poke_names = 'poke_names.txt'\n",
+    "poke_names = np.loadtxt(f_poke_names, delimiter=',', dtype=str)\n",
+    "\n",
+    "f_poke_gens = 'poke_gens.txt'\n",
+    "poke_gens = np.loadtxt(f_poke_gens, delimiter=',', dtype=int)\n",
+    "\n",
+    "\n",
+    "gen1_gen2_name_lengths_loop = []\n",
+    "\n",
+    "def loop(self):\n",
+    "    for name,gen in zip(poke_names, poke_gens):\n",
+    "        if gen < 3:\n",
+    "            name_length = len(name)\n",
+    "            poke_tuple = (name, name_length)\n",
+    "            gen1_gen2_name_lengths_loop.append(poke_tuple)\n",
+    "\n",
+    "%timeit loop('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "424 µs ± 14.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Replace the entire for loop with one list comprehension        \n",
+    "[(name, len(name)) for name,gen in zip(poke_names, poke_gens) if gen < 3]\n",
+    "%timeit [(name, len(name)) for name,gen in zip(poke_names, poke_gens) if gen < 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13 ns ± 0.676 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n",
+      "12.8 ns ± 0.188 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n",
+      "15.5 ns ± 1.48 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n",
+      "[('Abra', 4), ('Aerodactyl', 10), ('Aipom', 5), ('Alakazam', 8), ('Ampharos', 8)]\n",
+      "[('Abra', 4), ('Aerodactyl', 10), ('Aipom', 5), ('Alakazam', 8), ('Ampharos', 8)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Collect Pokémon that belong to generation 1 or generation 2\n",
+    "gen1_gen2_pokemon = [name for name,gen in zip(poke_names, poke_gens) if gen < 3]\n",
+    "%timeit gen1_gen2_pokemon\n",
+    "\n",
+    "# Create a map object that stores the name lengths\n",
+    "name_lengths_map = map(len, gen1_gen2_pokemon)\n",
+    "%timeit name_lengths_map\n",
+    "\n",
+    "# Combine gen1_gen2_pokemon and name_lengths_map into a list\n",
+    "gen1_gen2_name_lengths = [*zip(gen1_gen2_pokemon, name_lengths_map)]\n",
+    "%timeit gen1_gen2_name_lengths\n",
+    "\n",
+    "print(gen1_gen2_name_lengths_loop[:5])\n",
+    "print(gen1_gen2_name_lengths[:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- ---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Compared runtimes between the for loop and using list comprehension with a map() function, you'd see that the for loop took quite a bit longer._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- ---"
+   ]
   }
  ],
  "metadata": {
