add hps.txt and finished chapter 3

--- a/3 Gaining efficiencies/3 Gaining efficiences.ipynb
+++ b/3 Gaining efficiencies/3 Gaining efficiences.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -239,13 +239,13 @@
      "output_type": "stream",
      "text": [
       "Pokémon in both pokedex: \n",
-      " {'Psyduck', 'Squirtle'} \n",
+      " {'Squirtle', 'Psyduck'} \n",
       "\n",
       "Misty doesn't have those Pokémon:\n",
-      " {'Zubat', 'Pikachu', 'Koffing', 'Rattata', 'Bulbasaur', 'Spearow', 'Wigglytuff', 'Vulpix'} \n",
+      " {'Wigglytuff', 'Vulpix', 'Rattata', 'Spearow', 'Bulbasaur', 'Zubat', 'Koffing', 'Pikachu'} \n",
       "\n",
       "Pokémon that are in only one set (not both):\n",
-      " {'Poliwag', 'Starmie', 'Wigglytuff', 'Horsea', 'Magikarp', 'Krabby', 'Vulpix', 'Zubat', 'Koffing', 'Pikachu', 'Rattata', 'Vaporeon', 'Bulbasaur', 'Spearow', 'Slowbro', 'Tentacool'} \n",
+      " {'Starmie', 'Wigglytuff', 'Poliwag', 'Vulpix', 'Rattata', 'Tentacool', 'Spearow', 'Horsea', 'Bulbasaur', 'Zubat', 'Vaporeon', 'Slowbro', 'Koffing', 'Krabby', 'Pikachu', 'Magikarp'} \n",
       "\n"
      ]
     }
@@ -277,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Tauros', 'Machop', 'Omastar', 'Zubat', 'Onix', 'Geodude', 'Dugtrio', 'Golem', 'Kabutops', 'Vulpix'}\n",
+      "{'Tauros', 'Vulpix', 'Golem', 'Dugtrio', 'Kabutops', 'Omastar', 'Zubat', 'Onix', 'Machop', 'Geodude'}\n",
       "True\n",
       "False\n",
       "False\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -383,15 +383,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "137 µs ± 4.66 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
-      "978 µs ± 20.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "149 µs ± 1.14 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n",
+      "1.08 ms ± 38.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -409,15 +409,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Bug', 'Poison', 'Electric', 'Steel', 'Water', 'Grass', 'Flying', 'Normal', 'Ground', 'Fighting', 'Dragon', 'Fairy', 'Ice', 'Rock', 'Dark', 'Ghost', 'Fire', 'Psychic'}\n",
-      "{'6', '1', '2', '4', '5', '3'}\n"
+      "{'Psychic', 'Fairy', 'Flying', 'Dragon', 'Poison', 'Bug', 'Water', 'Fire', 'Ice', 'Steel', 'Ghost', 'Fighting', 'Dark', 'Ground', 'Rock', 'Grass', 'Normal', 'Electric'}\n",
+      "{'6', '5', '3', '1', '4', '2'}\n"
      ]
     }
    ],
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -446,7 +446,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "441 µs ± 10.5 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "443 µs ± 16 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -473,14 +473,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "424 µs ± 14.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "450 µs ± 60.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -492,16 +492,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13 ns ± 0.676 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n",
-      "12.8 ns ± 0.188 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n",
-      "15.5 ns ± 1.48 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n",
+      "13.3 ns ± 0.289 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n",
+      "13.6 ns ± 0.368 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n",
+      "13.7 ns ± 0.708 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n",
       "[('Abra', 4), ('Aerodactyl', 10), ('Aipom', 5), ('Alakazam', 8), ('Ampharos', 8)]\n",
       "[('Abra', 4), ('Aerodactyl', 10), ('Aipom', 5), ('Alakazam', 8), ('Ampharos', 8)]\n"
      ]
@@ -536,6 +536,260 @@
    "metadata": {},
    "source": [
     "_Compared runtimes between the for loop and using list comprehension with a map() function, you'd see that the for loop took quite a bit longer._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- ---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## One-time calculation loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generation 1: count =  99 percentage = 19.8\n",
+      "generation 5: count = 122 percentage = 24.4\n",
+      "generation 3: count = 103 percentage = 20.6\n",
+      "generation 6: count =  47 percentage = 9.4\n",
+      "generation 4: count =  78 percentage = 15.6\n",
+      "generation 2: count =  51 percentage = 10.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Collect the count of each generation\n",
+    "gen_counts = Counter(generations)\n",
+    "\n",
+    "# Improve for loop by moving one calculation above the loop\n",
+    "total_count = len(generations)\n",
+    "\n",
+    "for gen,count in gen_counts.items():\n",
+    "    total_count = len(generations)\n",
+    "    gen_percent = round(count / total_count * 100, 2)\n",
+    "    print(\n",
+    "      'generation {}: count = {:3} percentage = {}'\n",
+    "      .format(gen, count, gen_percent)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Let's make this loop more efficient by moving a one-time calculation outside the loop._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generation 1: count =  99 percentage = 19.8\n",
+      "generation 5: count = 122 percentage = 24.4\n",
+      "generation 3: count = 103 percentage = 20.6\n",
+      "generation 6: count =  47 percentage = 9.4\n",
+      "generation 4: count =  78 percentage = 15.6\n",
+      "generation 2: count =  51 percentage = 10.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for gen,count in gen_counts.items():\n",
+    "    gen_percent = round(count / total_count * 100, 2)\n",
+    "    print('generation {}: count = {:3} percentage = {}'\n",
+    "          .format(gen, count, gen_percent))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Holistic conversion loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pokemon_types = ['Bug', 'Dark', 'Dragon', 'Electric', 'Fairy', 'Fighting',\n",
+    "                 'Fire', 'Flying', 'Ghost', 'Grass', 'Ground', 'Ice',\n",
+    "                 'Normal', 'Poison', 'Psychic', 'Rock', 'Steel', 'Water']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Collect all possible pairs using combinations()\n",
+    "possible_pairs = [*combinations(pokemon_types, 2)]\n",
+    "\n",
+    "# Create an empty list called enumerated_tuples\n",
+    "enumerate_tuples = []\n",
+    "\n",
+    "enumerated_pairs = []\n",
+    "\n",
+    "for i,pair in enumerate(possible_pairs, 1):\n",
+    "    enumerated_pair_tuple = (i,) + pair\n",
+    "    enumerated_pair_list = list(enumerated_pair_tuple)\n",
+    "    enumerated_pairs.append(enumerated_pair_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Let's make this loop more efficient using a holistic conversion._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 'Bug', 'Dark'], [2, 'Bug', 'Dragon'], [3, 'Bug', 'Electric'], [4, 'Bug', 'Fairy'], [5, 'Bug', 'Fighting']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add a line to append each enumerated_pair_tuple to the empty list above\n",
+    "for i,pair in enumerate(possible_pairs, 1):\n",
+    "    enumerated_pair_tuple = (i,) + pair\n",
+    "    enumerate_tuples.append(enumerated_pair_tuple)\n",
+    "\n",
+    "# Convert all tuples in enumerated_tuples to a list\n",
+    "enumerated_pairs = [*map(list, enumerate_tuples)]\n",
+    "print(enumerated_pairs[:5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Used the map() function to convert tuples to lists all at once outside of a loop_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bringing it all together: Pokémon z-scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Read files\n",
+    "f_hps = 'hps.txt'\n",
+    "hps = np.loadtxt(f_hps, delimiter=',', dtype=int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Abomasnow', 80, 0.46797638117739043)\n",
+      "('Abra', 60, -0.3271693284337512)\n",
+      "('Absol', 131, 2.4955979406858013)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the total HP avg and total HP standard deviation\n",
+    "hp_avg = hps.mean()\n",
+    "hp_std = hps.std()\n",
+    "\n",
+    "# Use NumPy to eliminate the previous for loop\n",
+    "z_scores = (hps - hp_avg)/hp_std\n",
+    "\n",
+    "# Combine names, hps, and z_scores\n",
+    "poke_zscores2 = [*zip(names, hps, z_scores)]\n",
+    "print(*poke_zscores2[:3], sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Absol', 131, 2.4955979406858013)\n",
+      "('Bonsly', 127, 2.3365687987635733)\n",
+      "('Caterpie', 122, 2.137782371360788)\n",
+      "('Cofagrigus', 133, 2.575112511646916)\n",
+      "('Cresselia', 126, 2.296811513283016)\n",
+      "('Dewgong', 122, 2.137782371360788)\n",
+      "('Druddigon', 126, 2.296811513283016)\n",
+      "('Froakie', 123, 2.1775396568413448)\n",
+      "('Kadabra', 135, 2.65462708260803)\n",
+      "('Klang', 123, 2.1775396568413448)\n",
+      "('Kricketune', 122, 2.137782371360788)\n",
+      "('Lumineon', 129, 2.4160833697246873)\n",
+      "('Magnemite', 137, 2.734141653569144)\n",
+      "('Nidorina', 119, 2.0185105149191167)\n",
+      "('Onix', 126, 2.296811513283016)\n",
+      "('Prinplup', 124, 2.217296942321902)\n",
+      "('Skuntank', 128, 2.3763260842441305)\n",
+      "('Swellow', 125, 2.2570542278024592)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use list comprehension with the same logic as the highest_hp_pokemon code block\n",
+    "highest_hp_pokemon2 = [(name, hp, zscore) for name,hp,zscore in poke_zscores2 if zscore > 2]\n",
+    "print(*highest_hp_pokemon2, sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- ---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_The total time for executing the updated solution using NumPy and list comprehension was faster._"
    ]
   },
   {
